--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,4 +1,4 @@
 body {
-    background: url('back.jpg') no-repeat;
+    background-image: url('back.jpg') no-repeat;
     background-color: #426ec7;
 }
