--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,8 +1,4 @@
 body {
-<<<<<<< HEAD
-    background: url('back1.jpg') no-repeat;
-=======
-    background-image: url('back.jpg');
->>>>>>> 5ad2cde0f8e5ff37ad5d86fd4b5b734c0ee1defb
+    background-image: url('back1.jpg');
     background-color: #426ec7;
 }
