--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -12,6 +12,7 @@
   margin : 8px;
   position:relative;
   background-color:#FF6F61;
+  height:300px;
 }
 
 .row>div>div>p {
@@ -27,7 +28,7 @@ h3 {
   left:58%;
   margin:-2px 0px 0 2px;
   text-align:center;
-  height: 30%;
+  height: 40px;
   font-size:35px;
 }
 
@@ -47,11 +48,11 @@ h1 {
   background-color: #01FF70;
 }
 #gas h3{
-  background-color: #001f3f;
+  background-color: 	#0000CD;
 }
 
 
-/* For LArge Screen */
+/* For Large Screen */
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
